--- a/career-values-2.html
+++ b/career-values-2.html
@@ -398,9 +398,12 @@
                     <div class=" d-flex align-items-center">
                         <i class="fs-1-7 primary fas fa-home hover-cc me-5"></i>
                         <p class="fs-1-9 primary hover-cc custom-before me-5">
-                            Kariyera
+
+                            Bizi Fərqləndirən Dəyərlər
+
                         </p>
-                        <p class="fs-1-9 primary hover-cc custom-before">Yeni Məzun </p>
+                        <p class="fs-1-9 primary hover-cc custom-before">Öyrənmə və
+                            İnkişaf</p>
                     </div>
                 </div>
             </div>
@@ -408,13 +411,14 @@
         <section id="service-breadcrumb" class="white-bg">
             <div class="container pos-rel white-bg background ">
                 <div class="row background-height align-items-center">
-                    <div class="col-6   fw-600 service-title">Yeni Məzun</div>
+                    <div class="col-6    service-title">Öyrənmə və
+                        İnkişaf</div>
 
                 </div>
             </div>
             </div>
         </section>
-        <section id="service-panel" class="py-5 mt-5 mb-5 ">
+        <section id="service-panel" class="py-5 mt-5">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg-2">
@@ -426,7 +430,7 @@
                         </div>
                         <div class="nav-drop-menu d-flex flex-column my-3">
                             <a href="./careers-values.html" class="primary hover-cc fs-1-7 fw-600 my-3">Dəyərlərimiz</a>
-                            <a href="./career-values-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Öyrənmə və
+                            <a href="./careers-values-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Öyrənmə və
                                 İnkişaf</a>
                         </div>
 
@@ -476,81 +480,31 @@
             </div> -->
 
                     </div>
-                    <div class="col-12 col-lg-9 ">
-                        <!-- <div class="service-card-container d-flex flex-wrap">
-              <div class="main-card">
-                <p class="fs-2 fw-500 ls-2 primary">Students</p>
-                <p class="fs-2-5 fw-600 mt-3">Global transparency report 2020</p>
-              </div>
+                    <div class="col-12 col-lg-9">
+                        <div class="service-card-container d-flex flex-wrap">
+                            <p class=" fs-2 main-title mt-5">
+                                Baş Rəhbərlik Proqramı yüksək səviyyəli strateji vəzifələrdə olan baş direktorlara və
+                                liderlərə yönəldilmişdir, firmanın liderlik roluna başlayanlar üçün idealdır. Bu,
+                                transformasiya liderlərinə özlərini bir lider kimi daha yaxşı başa düşmək, bu günə
+                                qədərki liderlik səyahətlərini və qlobal brendə, firmalarının mədəniyyətinə və
+                                gələcəyinə necə təsir edəcəklərini daha yaxşı başa düşmək imkanı verən qlobal proqramdır
+                            </p>
+                            <p class="text fs-2 my-4">
+                                Qabaqcıl Lider Proqramı yüksək performanslı, təcrübəli və müştəri ilə üz-üzə olan yüksək
+                                səviyyəli menecerlər və direktorlar üçündür. Proqram iştirakçılara müştərilərə xidmət
+                                göstərərkən daha qlobal perspektiv inkişaf etdirmək, öz işgüzarlıqlarını artırmaq,
+                                müştəri və işçi münasibətlərini daha effektiv idarə etmək və beynəlxalq biznesdə qalib
+                                gəlmək üzərində işləmək imkanı verir. Onlar müştərilərimiz üçün strateji və innovativ
+                                həllər təqdim etməkdə özlərinə inamlarını artırmaq üçün dinamik və çətin mövzuları
+                                araşdıracaqlar
+                            </p>
 
 
-              <div class="card-info p-4 white-bg mb-4">
-                <p class=" fw-600 fs-2 ls-2 mb-4 ">
-                  Connect with us
-                </p>
 
-                <a href="#" class=" d-flex align-items-center primary ">
-                  <i class="fab fa-twitter fs-1-7  me-3 "></i>
-                  <p class="fs-1-7 "> Twitter</p>
-                </a>
-                <a href="#" class=" d-flex align-items-center primary  ">
-                  <i class="fab fa-facebook fs-1-7  me-3"></i>
-                  <p class="fs-1-7"> Facebook</p>
-                </a>
-              </div>
-              <div class="card-info p-4 secondary-bg">
-                <p class=" fw-600 fs-2 ls-2 mb-4 white">
-                  FAQS
-                </p>
-
-                <a href="#" class=" d-flex align-items-center white fs-2 text-underline">
-                  Want to learn more about working at FA Consulting? Read our FAQs
-                </a>
-
-              </div>
-
-            </div>  -->
-
-
-                        <p class="fw-600 fs-3 main-title mt-5">
-                            FA Audit Consulting yeni məzunlara faydalı karyera imkanları təklif edir!
-                        </p>
-                        <p class="text fs-2 my-5">
-                            "Yeni məzun programı" karyera axtarışında ilkin mərhələdə olan potesial kardların FA Audit
-                            Consulting ilə əlaqə yaratmaq üçün nəzərdə tutulmuş proqramdır. Bu proqram üçün ən uyğun
-                            namizədlər mühasibatlıqda gələcək karyeraya nail olmaq üçün səy göstərən yeni məzunlar üçün
-                            nəzərdə tutub .
-                        </p>
-
-                        <p class="text fs-2 my-5">
-                            Bu proqramın bütün iştirakçıları namizədlərə işə qəbul dövrünün əvvəlində təcrübə keçmək
-                            imkanı verən firma daxilində gələcək təcrübə vəzifəsi üçün müsahibədən keçirilir. Bu proqram
-                            üçün müraciətlər hər il qeyd edilən tarixlərdə keçirilir.
-                        </p>
-                        <ul class="ms-4 my-3">
-                            <p class="fw-600 ls-2 fs-2-5 my-3"> Əməkdaşlarınıza bölüşdüyümüz dəyərlər:</p>
-                            <li class="fs-1-9 fw-500 my-3">
-                                Fərdi inkişaf
-                            </li>
-                            <li class="fs-1-9 fw-500 my-3">
-                                Karyera məsləhəti
-                            </li>
-                            <li class="fs-1-9 fw-500 my-3">
-                                Davamlı öyrənmə
-                            </li>
-                            <li class="fs-1-9 fw-500 my-3">
-                                Bacarıqlara əsaslanan yüksəliş
-                            </li>
-                            <li class="fs-1-9 fw-500 my-3">
-                                Çoxsaylı karyera imkanları
-                            </li>
-                        </ul>
-
+                        </div>
 
                     </div>
-
                 </div>
-            </div>
             </div>
 
         </section>
