--- a/insights.html
+++ b/insights.html
@@ -536,7 +536,7 @@
                                         <img src="./assets/img/1.jpeg" alt="Formula driver" />
                                     </div>
                                     <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BLOQ</div>
+                                        <div class="card-tag darkgray">VERGİ</div>
                                         <a href="blog-1.html">
                                             <p class="fs-2 primary my-4 fw-600">
                                                 Əmək haqqı və onun ödənilməsində yaranan çətinliklər.
@@ -559,7 +559,7 @@
                                         <img src="./assets/img/2.jpeg" alt="Formula driver" />
                                     </div>
                                     <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BLOQ</div>
+                                        <div class="card-tag darkgray">BİZNES</div>
                                         <a href="blog-2.html">
                                             <p class="fs-2 primary my-4 fw-600">
                                                 Mühasibat Sisteminin 2022-ci İl Təhlili.
@@ -580,7 +580,7 @@
                                         <img src="./assets/img/3.jpeg" alt="Formula driver" />
                                     </div>
                                     <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BLOQ</div>
+                                        <div class="card-tag darkgray">AUDİT</div>
                                         <a href="blog-3.html">
                                             <p class="fs-2 primary my-4 fw-600">
                                                 Auditdə analitikanın əhəmiyyəti nədir?
@@ -600,7 +600,7 @@
                                         <img src="./assets/img/4.jpeg" alt="Formula driver" />
                                     </div>
                                     <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BLOQ</div>
+                                        <div class="card-tag darkgray">BİZNES</div>
                                         <a href="blog-4.html">
                                             <p class="fs-2 primary my-4 fw-600">
 
@@ -629,7 +629,7 @@
                                         <img src="./assets/img/1.jpeg" alt="Formula driver" />
                                     </div>
                                     <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BLOQ</div>
+                                        <div class="card-tag darkgray">VERGİ</div>
                                         <a href="blog-1.html">
                                             <p class="fs-2 primary my-4 fw-600">
                                                 Əmək haqqı və onun ödənilməsində yaranan çətinliklər.
@@ -652,7 +652,7 @@
                                         <img src="./assets/img/2.jpeg" alt="Formula driver" />
                                     </div>
                                     <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BLOQ</div>
+                                        <div class="card-tag darkgray">BİZNES</div>
                                         <a href="blog-2.html">
                                             <p class="fs-2 primary my-4 fw-600">
                                                 Mühasibat Sisteminin 2022-ci İl Təhlili.
@@ -673,7 +673,7 @@
                                         <img src="./assets/img/3.jpeg" alt="Formula driver" />
                                     </div>
                                     <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BLOQ</div>
+                                        <div class="card-tag darkgray">AUDİT</div>
                                         <a href="blog-3.html">
                                             <p class="fs-2 primary my-4 fw-600">
                                                 Auditdə analitikanın əhəmiyyəti nədir?
@@ -693,7 +693,7 @@
                                         <img src="./assets/img/4.jpeg" alt="Formula driver" />
                                     </div>
                                     <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BLOQ</div>
+                                        <div class="card-tag darkgray">BİZNES</div>
                                         <a href="blog-4.html">
                                             <p class="fs-2 primary my-4 fw-600">
 
