--- a/student-career-2.html
+++ b/student-career-2.html
@@ -398,9 +398,9 @@
                     <div class=" d-flex align-items-center">
                         <i class="fs-1-7 primary fas fa-home hover-cc me-5"></i>
                         <p class="fs-1-9 primary hover-cc custom-before me-5">
-                            Careers
+                            Kariyera
                         </p>
-                        <p class="fs-1-9 primary hover-cc custom-before">Students</p>
+                        <p class="fs-1-9 primary hover-cc custom-before">Peşakar Əməkdaş</p>
                     </div>
                 </div>
             </div>
@@ -408,7 +408,7 @@
         <section id="service-breadcrumb" class="white-bg">
             <div class="container pos-rel white-bg background ">
                 <div class="row background-height align-items-center">
-                    <div class="col-6   fw-600 service-title">Students</div>
+                    <div class="col-6   fw-600 service-title">Peşakar Əməkdaş</div>
 
                 </div>
             </div>
@@ -420,27 +420,20 @@
                     <div class="col-12 col-lg-2">
                         <div class="nav-wrapper d-flex justify-content-between align-items-center">
                             <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                                FA Consulting Difference
+                                Bizi Fərqləndirən Dəyərlər
                             </p>
                             <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
                         </div>
                         <div class="nav-drop-menu d-flex flex-column my-3">
-                            <a href="./careers-values.html" class="primary hover-cc fs-1-7 fw-600 my-3">Our values</a>
-                            <a href="./careers-values.html" class="primary hover-cc fs-1-7 fw-600 my-3">Learning &
-                                development</a>
+                            <a href="./careers-values.html" class="primary hover-cc fs-1-7 fw-600 my-3">Dəyərlərimiz</a>
+                            <a href="./career-values-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Öyrənmə və
+                                İnkişaf</a>
                         </div>
 
                         <div class="nav-wrapper d-flex justify-content-between align-items-center">
                             <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
                                 <a href="./student-career-1.html" class="primary hover-cc fs-1-9 my-3">Yeni
                                     məzun</a>
-                            </p>
-                            <!-- <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i> -->
-                        </div>
-                        <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                            <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                                <a href="./student-career-2.html" class="primary hover-cc fs-1-9 my-3">Təcrübəli
-                                    Əməkdaş</a>
                             </p>
                             <!-- <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i> -->
                         </div>
@@ -454,13 +447,15 @@
                                 Shannon Tan</a>
                         </div> -->
 
-                        <!-- <div class="nav-wrapper d-flex justify-content-between align-items-center">
+
+                        <div class="nav-wrapper d-flex justify-content-between align-items-center">
                             <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                                Experienced hires
+                                <a href="./student-career-2.html" class="primary hover-cc fs-1-9 my-3">Təcrübəli
+                                    əməkdaş</a>
                             </p>
-                            <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
+                            <!-- <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i> -->
                         </div>
-                        <div class="nav-drop-menu d-flex flex-column my-3">
+                        <!-- <div class="nav-drop-menu d-flex flex-column my-3">
                             <a href="./student-career.html" class="primary hover-cc fs-1-7 fw-600 my-3">Experienced
                                 hires - Tony
                                 Windle</a>
