--- a/team.html
+++ b/team.html
@@ -393,7 +393,7 @@
             <i class="fs-2 white fas fa-home hover-cc"></i>
             <p class="fs-2 white hover-cc">Komandamız</p>
           </div>
-          <div class="breadcrumb--title fs-2 white fw-400">Teamwork</div>
+          <div class="breadcrumb--title fs-2 white fw-400"> Müştərək İş </div>
           <div class="breadcrumb--text white mt-5">Komandamız</div>
           <div class="breadcrumb--nav d-flex flex-column flex-lg-row">
             <a href="./why-fac.html" class="white hover-cc fw-300 my-4 my-lg-0">Niyə biz?</a>
