--- a/careers-values.html
+++ b/careers-values.html
@@ -398,9 +398,11 @@
                     <div class=" d-flex align-items-center">
                         <i class="fs-1-7 primary fas fa-home hover-cc me-5"></i>
                         <p class="fs-1-9 primary hover-cc custom-before me-5">
-                            Xidmətlərimiz
+
+                            Bizi Fərqləndirən Dəyərlər
+
                         </p>
-                        <p class="fs-1-9 primary hover-cc custom-before">Vergi</p>
+                        <p class="fs-1-9 primary hover-cc custom-before">Dəyərlərimiz</p>
                     </div>
                 </div>
             </div>
@@ -408,7 +410,7 @@
         <section id="service-breadcrumb" class="white-bg">
             <div class="container pos-rel white-bg background ">
                 <div class="row background-height align-items-center">
-                    <div class="col-6    service-title">Vergi</div>
+                    <div class="col-6    service-title">Dəyərlərimiz</div>
 
                 </div>
             </div>
@@ -420,14 +422,14 @@
                     <div class="col-12 col-lg-2">
                         <div class="nav-wrapper d-flex justify-content-between align-items-center">
                             <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                                FA Consulting Difference
+                                Bizi Fərqləndirən Dəyərlər
                             </p>
                             <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
                         </div>
                         <div class="nav-drop-menu d-flex flex-column my-3">
-                            <a href="./careers-values.html" class="primary hover-cc fs-1-7 fw-600 my-3">Our values</a>
-                            <a href="./careers-values.html" class="primary hover-cc fs-1-7 fw-600 my-3">Learning &
-                                development</a>
+                            <a href="./careers-values.html" class="primary hover-cc fs-1-7 fw-600 my-3">Dəyərlərimiz</a>
+                            <a href="./career-values-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Öyrənmə və
+                                İnkişaf</a>
                         </div>
 
                         <div class="nav-wrapper d-flex justify-content-between align-items-center">
@@ -479,107 +481,22 @@
                     <div class="col-12 col-lg-9">
                         <div class="service-card-container d-flex flex-wrap">
                             <p class="fw-600 fs-3 main-title mt-5">
-                                Grant Thornton prides itself on being a values-driven organisation and we have 58,000
-                                people in over 130 countries who are passionately committed to these values.
+                                FA Audit Consulting-in sizə qatdığı dəyər
                             </p>
                             <p class=" fs-2 main-title mt-5">
-                                We have six CLEARR values that underpin our culture and are embedded in everything we do
+                                FA Audit Consulting-in əsas məqsədi geniş və müxtəlif mühasibatlıq və biznes məsləhət
+                                xidmətlərimiz vasitəsilə müştərilərimizə dəyər təqdim etməkdir. Biz ən yüksək keyfiyyət,
+                                səmərəlilik və xidmətə sadiqik vəd editik. Komandamız real həlləri praktiki rəhbərliklə
+                                təmin edərək hər bir müştəriyə misilsiz dəyər təqdim etməyə çalışır.
                             </p>
-                            <p class="text fs-2 my-4">
-                                <span class="fw-600">Collaboration:</span> ask for help, give help – we work well
-                                together.
-                            </p>
-                            <p class="text fs-2 my-4">
-                                <span class="fw-600">Leadership:</span> have courage and inspire others – we challenge
-                                each other to be the best we can be.
-                            </p>
-
-                            <p class="text fs-2 my-4">
-                                <span class="fw-600">Excellence:</span> find a better way every time – we never get
-                                complacent.
-                            </p>
-
-                            <p class="text fs-2 my-4">
-                                <span class="fw-600">Agility:</span>
-                                think broadly, act quickly – we thrive on change.
-                            </p>
-
-                            <p class="text fs-2 my-4">
-                                <span class="fw-600">Responsibility:</span>
-                                use influence wisely – we own our actions.
-                            </p>
-                            <p class="text fs-2 my-4">
-                                <span class="fw-600">Respect:</span>
-                                listen and understand, be forthright – we create honest relationships.
-                            </p>
-                            <p class="text fs-2 my-4">If you choose a career with us, these CLEARR values will become a
-                                part
-                                of your Grant
-                                Thornton experience. Our values are the foundation of our organisation.</p>
-                            <p class="text fs-2 my-4">Learn more about how our global culture could shape your career
-                                with
-                                Grant Thornton.</p>
 
                         </div>
 
                     </div>
                 </div>
 
-                <div class="row mt-60">
-                    <div class="col-lg-7">
-                        <p class="fs-2-4 fw-600 ">
-                            At Grant Thornton we develop transformational leaders throughout their career journey with
-                            global
-                            milestone programmes, strategic global assignments, and on-the-job experiences while
-                            creating
-                            meaningful connections along the way.
-                        </p>
-                    </div>
-                    <div class=" col-lg-4 career-bg" style="min-height: 224px;">
-                        <div class="pd-career">
-                            <span>CONTACT</span>
-                            <p>Get in touch to find out more</p>
-                            <div class="my-3 ">
-                                <a href="#">Read more <i class="fas fa-arrow-right"
-                                        style="position: relative; top: 2px;"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <p class="my-5 fs-1-8">The Senior Leadership Programme is aimed at CEOs and leaders in senior
-                            strategic
-                            positions
-                            and is ideal for those who are starting a board, board office, or firm wide leadership role.
-                            It is a global programme providing transformational leaders the opportunity to better
-                            understand themselves as a leader, their leadership journey to date, and how they will
-                            impact the global brand and their firm’s culture and future. Participants will have access
-                            to thought-provoking new thinking, leadership theory, and strategic frameworks from a
-                            premier academic institution, Harvard Business School.</p>
-                        <p class="my-5 fs-1-8">The Exceptional Coach Programme is an accredited coach development
-                            programme
-                            that provides
-                            our business leaders with a quality assured individual coach to practitioner level
-                            accreditation. This has been developed in-house with our business in mind and provides a
-                            complement to technical expertise in offering professional coaching to our people and
-                            clients</p>
-                        <p class="my-5 fs-1-8">The Advanced Leader Programme is for high-performing, experienced, and
-                            client-facing senior managers and directors. The programme enables participants to develop a
-                            more global perspective when serving clients, increase their own business acumen, manage
-                            client and employee relationships more effectively and work on winning international
-                            business. They will explore dynamic and challenging topics to enhance their self-confidence
-                            in delivering strategic and innovative solutions for our clients</p>
-                        <p class="my-5 fs-1-8">
-                            The Emerging Leaders Programme is aimed at managers and senior managers who are recognised
-                            as future leaders by their firms and is designed to support cross-border and cross-service
-                            line collaboration. Participants will network and collaborate cross regionally, develop
-                            their understanding of the regional market and the role of the growth advisor and improve
-                            the skills needed to lead successful and diverse teams and leverage individual strengths.
-                        </p>
-                    </div>
-                </div>
-                <div class="d-flex justify-content-around mt-60 mobile-2">
+
+                <!-- <div class="d-flex justify-content-around mt-60 mobile-2">
                     <h3 class="fs-2-4">Share this page</h3>
                     <div class="career-social">
                         <ul class="d-flex mobile">
@@ -589,7 +506,7 @@
                             <li><a href="#"><i class="fab fa-instagram fs-40 ml-30"></i></a></li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
 
         </section>
