--- a/customers.html
+++ b/customers.html
@@ -394,7 +394,7 @@
             <i class="fs-2 white fas fa-home hover-cc"></i>
             <p class="fs-2 white hover-cc">Müştərilərimiz</p>
           </div>
-          <div class="breadcrumb--title fs-2 white fw-400">Best quality</div>
+          <div class="breadcrumb--title fs-2 white fw-400">YÜKSƏK KEYFİYYƏT</div>
           <div class="breadcrumb--text white mt-5">Müştərilərimiz</div>
           <div class="breadcrumb--nav d-flex flex-column flex-lg-row">
             <a href="./why-fac.html" class="white hover-cc fw-300 my-4 my-lg-0">Niyə biz?</a>
@@ -477,22 +477,22 @@
         <div class="row">
           <div class="col-12 col-lg-4 px-0">
             <div class="personel-card" style="background-image: url('./assets/img/why-fa-1.jpg')">
-              <div class="personel-card-title white">Xidmətlər</div>
+              <div class="personel-card-title white">XİDMƏTLƏR</div>
               <div class="personel-card-info white mt-5">Audit Xidmətləri</div>
               <div class="personel-card-sub white my-3">
-                Audit xidmətləri FA Audit Consulting tərəfindən müştərilərinə göstərdiyi xidmətlərin əsasını təşkil
-                edir. Biz multidissiplinar partnorlarımıza yüksək keyfiyyətli audit servisləri təqdim edirik.
+                Biz tərəfdən müştərilərinə göstərdiyi xidmətlərin əsasını təşkil edir. Biz partnorlarımıza yüksək
+                keyfiyyətli audit servisləri təqdim edirik.
               </div>
               <a href="./audit.html">
                 <button class="btndefault btn-w border-w">
-                  Audit Xidmətlərimiz haqqında məlumat əldə edin
+                  Audit Xidmətlərimiz
                 </button>
               </a>
             </div>
           </div>
           <div class="col-12 col-lg-4 px-0">
             <div class="personel-card" style="background-image: url('./assets/img/why-fa-2.jpg')">
-              <div class="personel-card-title white">Xidmətlər</div>
+              <div class="personel-card-title white">XİDMƏTLƏR</div>
               <div class="personel-card-info white mt-5">Vergi Xidmətləri</div>
               <div class="personel-card-sub white my-3">
                 Müştərilərimizə kömək edə biləcək bilikli mütəxəssislər vergi mürəkkəbliyini aradan qaldıraraq, biznesli
@@ -500,14 +500,14 @@
               </div>
               <a href="./services-tax.html">
                 <button class="btndefault btn-w border-w">
-                  Vergitutma işlərinizi FA Audit Consulting-ə etibar edin
+                  Vergitutma Xidmətlərimiz
                 </button>
               </a>
             </div>
           </div>
           <div class="col-12 col-lg-4 px-0">
             <div class="personel-card" style="background-image: url('./assets/img/why-fa-3.jpg')">
-              <div class="personel-card-title white">Xidmətlər</div>
+              <div class="personel-card-title white">XİDMƏTLƏR</div>
               <div class="personel-card-info white mt-5">Məsləhət Xidmətləri</div>
               <div class="personel-card-sub white my-3">
                 Müştərilərimizə dəyər yaratmaq və onlara dəyişdirmək imkanı vermək üçün əməliyyat məsləhət xidmətləri
@@ -515,7 +515,7 @@
               </div>
               <a href="./services-advisory.html">
                 <button class="btndefault btn-w border-w">
-                  Məsləhət xidmətlərimiz sizə necə kömək edə bilər
+                  Məsləhət xidmətlərimiz
                 </button>
               </a>
             </div>
