--- a/index.html
+++ b/index.html
@@ -77,17 +77,22 @@
 
 
       </nav>
-      <div class="col-6  justify-content-end search">
+      <div class="col-12  justify-content-end search">
         <div class="icon-box d-flex justify-content-end align-items-center search_2">
-          <form action="#" class="toggleInput" style="display: none;">
-            <input type="text" class="search-input" placeholder="Search">
+          <form action="#" style="border-left: none;">
+            <input type="text" class="search-input_2" placeholder="Search">
           </form>
+
           <!-- <a href="#" class="hover-cc primary toggleInput">
             Find your local member firm
           </a> -->
-          <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
-          <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i></a>
-          <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
+          <!-- <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a> -->
+          <!-- <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a> -->
+          <!-- <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i></a> -->
+          <select name="membership" id="membership">
+            <option value="free">AZ</option>
+            <option value="bronze">EN</option>
+          </select>
         </div>
       </div>
     </div>
@@ -114,8 +119,9 @@
             </form>
             <span href="#" style="font-size: 20px;" class=" primary toggleInput">
               Sizin Maliyyə Sabitliyiniz</span>
-            <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
-            <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
+            <!-- <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a> -->
+
+            <!-- <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i> -->
             </a>
             <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
           </div>
