--- a/insights.html
+++ b/insights.html
@@ -83,35 +83,40 @@
 
 
             </nav>
-            <div class="col-6  justify-content-end search">
+            <div class="col-12  justify-content-end search">
                 <div class="icon-box d-flex justify-content-end align-items-center search_2">
-                    <form action="#" class="toggleInput" style="display: none;">
-                        <input type="text" class="search-input" placeholder="Search">
+                    <form action="#" style="border-left: none;">
+                        <input type="text" class="search-input_2" placeholder="Search">
                     </form>
+
                     <!-- <a href="#" class="hover-cc primary toggleInput">
-                        Find your local member firm
-                    </a> -->
-                    <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
-                    <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i></a>
-                    <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
+                Find your local member firm
+              </a> -->
+                    <!-- <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a> -->
+                    <!-- <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a> -->
+                    <!-- <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i></a> -->
+                    <select name="membership" id="membership">
+                        <option value="free">AZ</option>
+                        <option value="bronze">EN</option>
+                    </select>
                 </div>
             </div>
         </div>
         <div class="container header-top">
             <div class="row justify-content-between align-items-center top-header">
                 <div class="col-5 mini-logo">
-                    <a href="./index.html">
-                        <div class="image-wrapper">
+                    <div class="image-wrapper">
+                        <a href="./index.html">
                             <img src="./assets/img/fa.png" alt="logo of company" />
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
                 <div class="col-5 header-write">
-                    <a href="index.html">
-                        <div class="image-wrapper logo">
+                    <div class="image-wrapper logo">
+                        <a href="index.html">
                             <img src="./assets/img/yazi.png" alt="logo of company" />
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
                 <div class="col-6 desk-nav justify-content-end">
                     <div class="icon-box d-flex justify-content-end align-items-center">
@@ -120,8 +125,9 @@
                         </form>
                         <span href="#" style="font-size: 20px;" class=" primary toggleInput">
                             Sizin Maliyyə Sabitliyiniz</span>
-                        <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
-                        <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
+                        <!-- <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a> -->
+
+                        <!-- <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i> -->
                         </a>
                         <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
                     </div>
@@ -452,9 +458,10 @@
                                 </div>
                                 <div class="col-lg-3">
                                     <div>
-                                        <div class="tag">AUTSORSİNQ</div>
+
                                         <input type="checkbox" id="checkbox-2-9"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-9"></label>
+                                        <div class="tag">AUTSORSİNQ</div>
                                     </div>
                                 </div>
                             </div>
@@ -476,17 +483,18 @@
 
                                 <div class="col-lg-3">
                                     <div>
-                                        <div class="tag">Mühasİbat uçotu</div>
+
                                         <input type="checkbox" id="checkbox-2-7"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-7"></label>
-
+                                        <div class="tag">Mühasİbat uçotu</div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3">
                                     <div>
-                                        <div class="tag">ƏDV</div>
+
                                         <input type="checkbox" id="checkbox-2-12"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-12"></label>
+                                        <div class="tag">ƏDV</div>
                                     </div>
                                 </div>
                             </div>
@@ -494,30 +502,34 @@
 
                                 <div class="col-lg-3">
                                     <div>
-                                        <div class="tag">BHMS (IFRS)</div>
+
                                         <input type="checkbox" id="checkbox-2-8"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-8"></label>
+                                        <div class="tag">BHMS (IFRS)</div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3">
                                     <div>
-                                        <div class="tag">Bİznes</div>
+
                                         <input type="checkbox" id="checkbox-2-13"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-13"></label>
+                                        <div class="tag">Bİznes</div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3">
                                     <div>
-                                        <div class="tag">Xəbərlər</div>
+
                                         <input type="checkbox" id="checkbox-2-10"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-10"></label>
+                                        <div class="tag">Xəbərlər</div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3">
                                     <div>
-                                        <div class="tag">RİSK</div>
+
                                         <input type="checkbox" id="checkbox-2-14"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-14"></label>
+                                        <div class="tag">RİSK</div>
                                     </div>
                                 </div>
                             </div>
