ful fix responsive

--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
             <div class="news-card">
               <div class="news-card--date">17 Dec 2021</div>
               <div class="news-card--title">
-                <a href="news.html" class="primary">2022-ci ildə bankları ən çox narahat edən risk açıqlandı...</a>
+                <a href="insights.html" class="primary">2022-ci ildə bankları ən çox narahat edən risk açıqlandı...</a>
               </div>
               <div class="news-card--text mt-44">
                 “2022-ci ildə bizi narahat edən ən böyük amil dünyadakı bahalaşmadır. Artıq Azərbaycanda inflyasiya
@@ -678,7 +678,7 @@
             <div class="news-card">
               <div class="news-card--date">17 Dec 2021</div>
               <div class="news-card--title">
-                <a href="news.html" class="primary">Vergi Məcəlləsində edilmiş dəyişikliklər...</a>
+                <a href="insights.html" class="primary">Vergi Məcəlləsində edilmiş dəyişikliklər...</a>
               </div>
               <div class="news-card--text mt-44">
                 Vergi Məcəlləsində edilmiş dəyişikliklərdən biri bank hesabları barədə məlumatların vergi orqanına
@@ -691,7 +691,7 @@
             <div class="news-card">
               <div class="news-card--date">17 Dec 2021</div>
               <div class="news-card--title">
-                <a href="news.html" class="primary">Yerli istehsalın təşviqi ilə bağlı vergi tənzimləmələri həyata
+                <a href="insights.html" class="primary">Yerli istehsalın təşviqi ilə bağlı vergi tənzimləmələri həyata
                   keçiriləcək</a>
               </div>
               <div class="news-card--text mt-44">
@@ -702,7 +702,7 @@
             </div>
           </div>
           <div class="col-12 text-end py-5">
-            <a id="viewAll" href="news.html">Hamısını oxu <i class="fas fa-arrow-right"></i></a>
+            <a id="viewAll" href="insights.html">Hamısını oxu <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
       </div>
